- Fix the main layout to allow fixed / scrolled content - Added ScrollableSectionContent to complement SectionContent - SectionContent now extends Container to allow ScrollableViewPort - remove some additional styles in TouDeJewel not needed anymore - WizardPage now extends ScrollableSectionContent to allow content be scrollable if needed while navigation buttons are always centered in visible screen - Minor fixes to Tabbar to be compliant with this update

--- a/examples/royale/TourDeJewel/src/main/resources/jewel-example-styles.css
+++ b/examples/royale/TourDeJewel/src/main/resources/jewel-example-styles.css
@@ -22,16 +22,6 @@
 @namespace "http://www.w3.org/1999/xhtml";
 @namespace j "library://ns.apache.org/royale/jewel";
 
-.mainContent 
-{
-    padding: 5px;
-}
-
-.jewel.section
-{
-    padding-top: 20px;
-}
-
 .iconListItemRenderer
 {
     IItemRenderer: ClassReference("itemRenderers.IconListItemRenderer");
